# Coffee_AI

./: DATABASE_INTEGRATION_SUMMARY.md  INTEGRATION_README.md  INTEGRATION_SUMMARY.md  README.md  alembic.ini  index.html  setup.md  setup_database.py  start_integrated.bat  start_integrated.sh  test_integration.py  test_registration.py
chatbot_rag-main/: .env  main.py  pyproject.toml  rag_test_qa_20250714_202542.txt  rag_test_results_20250714_202542.json  requirements.txt  run_server.sh
chatbot_rag-main/core/: config.py  embed_documents.py  embed_products.py  llm_service.py  llm_utils.py  rag.py
chatbot_rag-main/core/data/: test_questions.txt
chatbot_rag-main/core/data/documents/: general_qa.txt  refund_qa.txt
chatbot_rag-main/core/data/products/: product_catalog.json
chatbot_rag-main/core/scripts/: create_embeddings.py  test_questions.txt  test_rag_system.py
chatbot_rag-main/data/vectorstore/products/: chroma.sqlite3
database/: coffee_shop.db  coffee_shop_backup.db  db_service.py  migrate_csv_to_db.py  migrate_remove_sessionid_cart_items.py  schema.sql
public/cafe_chat_corner_main/: index.html  package.json
src/: App.tsx  index.css
src/components/: BrewingNotes.tsx  Chatbot.tsx  Navigation.tsx  ProductCard.tsx  ProductDetailHeader.tsx  ProductInfoCards.tsx  ProductOptions.tsx
src/lib/: utils.ts
src/pages/: Cart.tsx  Checkout.tsx  ForgotPassword.tsx  Home.tsx  Index.tsx  Login.tsx  OurStory.tsx  ProductDetail.tsx  Register.tsx  ResetPassword.tsx
src/services/: api.ts
src/types/: product.ts
