[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["ShreenidhiHD <shreenidhihaagalagodu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
langchain = "0.1.14"
chromadb = "0.4.24"
sentence-transformers = "^5.0.0"
llama-cpp-python = "^0.3.12"
pandas = "^2.3.1"
tqdm = "^4.67.1"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
tabulate = "^0.9.0"
rich = "^14.0.0"
google-generativeai = "^0.3.1"
google-generativeai = "^0.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
